--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.ym
+!.elasticbeanstalk/*.global.yml
 env.bat
 node_modules/*
